tests/ast_interpreter/err_logical_not_int.expected
<string>:2:5: error: logical negation cannot be applied to Int
    !5;
    ^
